--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Mini Game</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script defer type="module" src="js/enemy.js"></script>
+    <script defer type="module" src="js/player.js"></script>
     <script defer type="module" src="js/main.js"></script>
-      <script defer type="module" src="js/player.js"></script>
 </head>
 <body>
 <div id="background"></div>
